--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 
     <link rel="icon" href="img/icon.png">
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Portifólio - Joanderson">
+    <meta property="og:description" content="Seja bem vindo(a) ao meu portifólio. Aqui você saberá um pouco sobre a minha pessoa. Deixarei disponível meu curriculo no botão mais abaixo. Fique a vontade para explora totalmente o site.">
+    <meta property="og:image" content="img/photo.jpg">
+    <meta property="og:url" content="URL da Página">
+    <meta property="og:type" content="website">
+
     <title>Portifolio - Joanderson</title>
 </head>
 <body>
